Removed extra "Gender" label option Standardized some class usage Removed <br> tags being used for spacing, modernized some <strong> vs <span bold>, fixed potential nested-form problems Fixed some inconsistent spacing/padding

--- a/responders/src/UI/embc-responder/src/app/feature-components/wizard/ess-file-components/animals/animals.component.scss
+++ b/responders/src/UI/embc-responder/src/app/feature-components/wizard/ess-file-components/animals/animals.component.scss
@@ -18,6 +18,14 @@ mat-form-field {
   height: 55px;
 }
 
+.bottom-space {
+  margin-bottom: 1.5em;
+}
+
+.bottom-space-large {
+  margin-bottom: 4.5em;
+}
+
 table {
   width: 100%;
 }
