--- a/responders/src/UI/embc-responder/src/app/feature-components/wizard/ess-file-components/evacuation-details/evacuation-details.component.scss
+++ b/responders/src/UI/embc-responder/src/app/feature-components/wizard/ess-file-components/evacuation-details/evacuation-details.component.scss
@@ -27,6 +27,7 @@
 .tab-subtitle {
   font-size: 21px;
   color: #234075;
+  margin-bottom: 1em;
 }
 
 .prim-address {
