--- a/responders/src/UI/embc-responder/src/app/feature-components/wizard/ess-file-components/household-members/household-members.component.scss
+++ b/responders/src/UI/embc-responder/src/app/feature-components/wizard/ess-file-components/household-members/household-members.component.scss
@@ -39,6 +39,10 @@
   width: 100%;
 }
 
+.bottom-space {
+  margin-bottom: 1.5em;
+}
+
 .next {
   float: right;
   width: 40%;
