--- a/responders/src/UI/embc-responder/src/app/feature-components/wizard/ess-file-components/needs/needs.component.scss
+++ b/responders/src/UI/embc-responder/src/app/feature-components/wizard/ess-file-components/needs/needs.component.scss
@@ -2,9 +2,10 @@ mat-form-field {
   width: 100%;
 }
 
-.question {
-  color: #234075;
+.tab-subtitle {
   font-size: 21px;
+  color: #234075;
+  margin-bottom: 1em;
 }
 
 .primary-radio-group {
